# PapilioCharontis

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  README.zh-CN.md  build.ps1  build.sh  cpp.hint
.github/workflows/: build.yml
bind/: CMakeLists.txt
bind/pybind/: CMakeLists.txt  pypapilio.cpp
binding/: CMakeLists.txt
binding/c_papilio/: CMakeLists.txt  cpp.hint
binding/c_papilio/example/: c_interface.c
binding/c_papilio/include/: c_papilio.h
binding/c_papilio/src/: c_papilio.cpp
binding/c_papilio/test/: cpp.hint  test_c_papilio.cpp  wrapper.c  wrapper.h
binding/em_papilio/: CMakeLists.txt  papilio_embind.cpp
cmake/: PapilioConfig.cmake.in
doc/en/: accessor.md  build.md  builtin_accessor.md  builtin_formatter.md  contents.md  custom_build.md  examples.md  faq.md  formatter.md  script.md
doc/zh-CN/: accessor.md  build.md  builtin_accessor.md  builtin_formatter.md  contents.md  custom_build.md  examples.md  faq.md  formatter.md  quickstart.md  script.md
example/: CMakeLists.txt  basic_format.cpp  c_interface.c  custom_formatter.cpp  import.cpp  info.cpp  magic_enum.cpp  playground.cpp  script_demo.cpp  styled_output.cpp  unicode_output.cpp
example/playground/: CMakeLists.txt  ipapilio.cpp  ipapilio.hpp  main.cpp
include/: c_papilio.h
include/papilio/: access.hpp  block.hpp  color.hpp  container.hpp  core.hpp  core.inl  error.hpp  fmtfwd.hpp  format.hpp  iterstream.hpp  locale.hpp  macros.hpp  memory.hpp  papilio.hpp  parser.hpp  print.hpp  script.hpp  type.hpp  utf.hpp  utf8.hpp  utility.hpp  xchar.hpp
include/papilio/access/: misc.hpp  misc.inl  range.hpp  ranges.inl  string.hpp  tuple.hpp  tuple.inl
include/papilio/accessor/: chrono.hpp  misc.hpp  ranges.hpp  tuple.hpp  vocabulary.hpp
include/papilio/chrono/: chrono_traits.hpp  chrono_utility.hpp
include/papilio/common/: common.hpp  context.hpp  type.hpp
include/papilio/detail/: compat.hpp  config.h  config.hpp  constants.h  container.hpp  detail.hpp  iterstream.hpp  prefix.hpp  suffix.hpp
include/papilio/format/: custom.hpp  format.hpp  fundamental.hpp  fundamental.inl  helper.hpp  integral.hpp  misc.hpp  misc.inl  spec.hpp  tuple.inl
include/papilio/formatter/: chrono.hpp  container_adaptor.hpp  filesystem.hpp  misc.hpp  tuple.hpp  vocabulary.hpp
include/papilio/os/: os.hpp
include/papilio/script/: compiler.hpp  context.hpp  error.hpp  exec.hpp  interpreter.hpp  keywords.hpp  lexer.hpp  literal.hpp  operators.hpp  script.hpp  variable.hpp
include/papilio/utf/: codepoint.hpp  codepoint.inl  common.hpp  stralgo.hpp  string.hpp  utf.hpp
include/papilio/util/: all.hpp  chrono.hpp  join.hpp  stl_container.hpp
modules/: papilio.cppm  papilio.ixx
natvis/: papilio.natvis
script/: Doxyfile.in
src/: access.cpp  c_papilio.cpp  color.cpp  container.cpp  core.cpp  format.cpp  locale.cpp  papilio.cpp  papilio.cppm  papilio.script.cppm  print.cpp  script.cpp  utf8.cpp  xchar.cpp
src/detail/: container.cpp  detail.cpp
src/formatter/: filesystem.cpp
src/os/: general.cpp  os_impl.hpp  posix.cpp  winapi.cpp
src/script/: interpreter.cpp  variable.cpp
src/utf/: codepoint.cpp  common.cpp  stralgo.cpp  string.cpp
test/: CMakeLists.txt  cpp.hint  test_access.cpp  test_chrono.cpp  test_container.cpp  test_core.cpp  test_detail_container.cpp  test_detail_iterstream.cpp  test_format.cpp  test_format_fundamental.cpp  test_format_integral.cpp  test_iterstream.cpp  test_locale.cpp  test_memory.cpp  test_module.cpp  test_modules.cpp  test_print.cpp  test_script.cpp  test_script_interpreter.cpp  test_script_variable.cpp  test_stl_container.cpp  test_type.cpp  test_utf8.cpp  test_utf_codepoint.cpp  test_utf_common.cpp  test_utf_stralgo.cpp  test_utf_string.cpp  test_utility.cpp
test/block/: block_test.cpp
test/common/: CMakeLists.txt
test/common/context/: context_test.cpp
test/common/type/: CMakeLists.txt  type_test.cpp
test/compiler/: compiler_test.cpp
test/format/: CMakeLists.txt
test/format/fundamental/: CMakeLists.txt  fundamental_test.cpp
test/lexer/: lexer_test.cpp
test/misc/: CMakeLists.txt  misc_test.cpp
test/papilio_test/: CMakeLists.txt
test/papilio_test/include/papilio_test/: chrono_helper.hpp  locale_helper.hpp  prefix.hpp  setup.hpp  suffix.hpp
test/script/: CMakeLists.txt
test/script/block/: CMakeLists.txt
test/script/compiler/: CMakeLists.txt  compiler_test.cpp
test/script/context/: CMakeLists.txt  context_test.cpp
test/script/exec/: CMakeLists.txt  exec_test.cpp
test/script/lexer/: CMakeLists.txt  lexer_test.cpp
test/script/misc/: misc_test.cpp
test/test_access/: CMakeLists.txt  chrono.cpp  test_access.cpp
test/test_container/: CMakeLists.txt  fixed_flat_map.cpp  fixed_vector.cpp  small_vector.cpp  test_container.cpp
test/test_core/: CMakeLists.txt  custom_context.cpp  format_arg.cpp  format_context.cpp  interpreter.cpp  rebind_iterator.cpp  test_core.cpp  test_core.hpp
test/test_format/: CMakeLists.txt  chrono.cpp  chrono_duration.cpp  chrono_general.cpp  chrono_misc.cpp  chrono_timezone.cpp  combined.cpp  container_adaptor.cpp  custom_type.cpp  filesystem.cpp  float_formatter.cpp  format.cpp  formatter.cpp  int_formatter.cpp  misc.cpp  ranges.cpp  script.cpp  test_format.cpp  test_format.hpp  tuple_formatter.cpp  util.cpp  vocabulary_formatter.cpp  xchar.cpp
test/test_install/: CMakeLists.txt  test_install.cpp
test/test_subdir/: CMakeLists.txt  test_subdir.cpp
test/utility/: CMakeLists.txt  utility_test.cpp
